# libnami

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
include/nami/: containers.h  core.h  entry.h  io.h  math.h  memory.h  string.h
src/: internals.h  math.c  memory.c  numerics.c  posix_io.c  string.c  win64_io.c
src/platform/: posix_io.c  posix_memory.c  win64_io.c  win64_memory.c
test/: main.c
